Fix the border-radius with overflow and adjust some width and height of keyboard to order to work with overflow: hidden

--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,16 @@ body{
 }
 
 section{
-    width: 80%;
-    height: 60%;
     background:  #5ba5db87;
     border-radius: 25px;
+    overflow: hidden;
 }
 
 /* Set styles for Screen display */
 .screen{
-    height: 150px;
+    /* height: 150px; */
     background: #001E34;
-    margin: 20px;
+    /* margin: 20px; */
 }
 
 .screen_Container{
@@ -50,14 +49,19 @@ section{
 /* set styles for keyboard */
 
 .btn{
-    width: 100%;
-    height: 100%;
+    width: 50px;
+    height: 50px;
     font-size: 17px;
     cursor: pointer;
     border: 0.2px solid black;
     background: #002B4A;
     color: white;
     outline: none;
+}
+
+.zero, .equal{
+    width: 100%;
+    height: 100%;
 }
 
 .operator{
